# xlparser

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  makefile  pyproject.toml  requirement.txt  requirements.txt  setup.py  test_cli.py  test_main.py  test_xlparser.py  xlparser  xlparser.py  xlscsv.py
testdata/: merged.xlsx
xlparser/: __init__.py  xlparser.py
