[tool.poetry]
name = "xlparser"
version = "0.5.11"
description = "Parse excel(xlsx/xls/csv) to other format(csv, xlsx, json)."
readme = "README.en.md"
authors = ["ahuigo <1781999+ahuigo@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.3"
openpyxl = "^3.0.10"
python-dateutil = "^2.8.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"