[tool.poetry]
name = "xlparser"
version = "0.6.1"
description = "Parse excel(xlsx/xls/csv) to other format(csv, xlsx, json)."
readme = "README.en.md"
authors = ["ahuigo <1781999+ahuigo@users.noreply.github.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "*.py"
[[tool.poetry.packages]]
include = "xlparser"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.7"
openpyxl = "^3.1.5"
python-dateutil = ">=2.8.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# cli.py 的main 函数; xlparser 不支持cli.sh 等非py 文件
# cli_name = "package_name.path:func_name"
# 实际安装后的脚本是: `from package_name.path import main; main()`
xlparser = "xlparser.cli:main"